--- a/css/jumbotron.css
+++ b/css/jumbotron.css
@@ -2,10 +2,21 @@
 	background-color: #f5f5f5;
 }
 
+#back-to-top {
+	position: absolute;
+	bottom: 20px;
+	right: 20px;
+}
+
+#back-to-top a {
+	color: #333;
+}
+
 footer {
 	background-color: #e74c3c;
 	padding-top: 110px;
 	padding-bottom: 20px;
+	position: relative;
 }
 
 .jumbotron h1 {
